# find-libraries

./: README.md  pyproject.toml
find_libraries/: app.py
find_libraries/data/: libraries.json
find_libraries/utils/: _validation.py  config.json
